--- a/index.html
+++ b/index.html
@@ -62,12 +62,12 @@ font-size: 30px;
     </head>
 
 <body>
-<h1><a href="kokipeida.html">KOKIPEIDA<br></a></h1>
+<h1><a href="index.html">KOKIPEIDA<br></a></h1>
 <div id="grid">
 <ol><li><a href="https://www.instagram.com/rhtmdrn/">INSTAGRAM</a></li>
     <li><a href="https://www.hoyolab.com/accountCenter/postList?id=90157948">HOYOLAB</a></li>
 <li><a href="https://opentutorials.org/course/1">OPENTUTORIALS</a></li>
-<li><a href="index.html" id="saw">NOW DOING</a></li></lo></ol>
+<li><a href="1.html" id="saw">NOW DOING</a></li></lo></ol>
 
 <div id="apple">안녕하세요 고승건의 학습공간입니다.
 </p>
