--- a/1.html
+++ b/1.html
@@ -62,7 +62,7 @@ font-family: 'Nanum Pen Script', cursive;
     </head>
 
 <body>
-<h1><a href="kokipeida.html">KOKIPEIDA<br></a></h1>
+<h1><a href="index.html">KOKIPEIDA<br></a></h1>
 <div id="grid">
 <ol><li><a href="https://www.instagram.com/rhtmdrn/">INSTAGRAM</a></li>
     <li><a href="https://www.hoyolab.com/accountCenter/postList?id=90157948">HOYOLAB</a></li>
