--- a/1.html
+++ b/1.html
@@ -11,7 +11,7 @@
 <link href="https://fonts.googleapis.com/css2?family=Gowun+Batang&family=Nanum+Pen+Script&display=swap" rel="stylesheet">
 
 
-        <title>kokipeida</title>
+        <title>kokipedia</title>
        
         <style>
            body{margin:50px;}
@@ -62,7 +62,7 @@ font-family: 'Nanum Pen Script', cursive;
     </head>
 
 <body>
-<h1><a href="index.html">KOKIPEIDA<br></a></h1>
+<h1><a href="index.html">KOKIPEDIA<br></a></h1>
 <div id="grid">
 <ol><li><a href="https://www.instagram.com/rhtmdrn/">INSTAGRAM</a></li>
     <li><a href="https://www.hoyolab.com/accountCenter/postList?id=90157948">HOYOLAB</a></li>
