--- a/1.html
+++ b/1.html
@@ -69,7 +69,8 @@ font-family: 'Nanum Pen Script', cursive;
 <li><a href="https://opentutorials.org/course/1">OPENTUTORIALS</a></li>
 <li><a href="1.html" id="saw">NOW DOING</a></li></lo></ol>
 
-<div id="apple"><h2>2023년 4월 9일</h2><p>html 강의 및 연습 완료 CSS GRID 사용법까지 연습완료.
+<div id="apple"><h2>2023년 4월 7일</h2><p>egoing html css 시작</p>
+    <h2>2023년 4월 9일</h2><p>html 강의 및 연습 완료 CSS GRID 사용법까지 연습완료.
 </p>
 
 <div>
