--- a/index.html
+++ b/index.html
@@ -70,7 +70,9 @@ font-size: 30px;
 <li><a href="1.html" id="saw">NOW DOING</a></li></lo></ol>
 
 <div id="apple">안녕하세요 고승건의 학습공간입니다.
-<p>KOKIPEDIA는 현재 코딩,토익,전공등 여러가지 자료를 모으기 위해 제작된 웹입니다.</p>
+<p>KOKIPEDIA는 현재 코딩,토익,전공등 여러가지 자료를 모으기 위해 제작된 웹입니다.<br>
+    EGOING WEB 1,2을 참고하여 만들어졌습니다.</p>
+</p>
 
 <div>
 </div>  
