--- a/1.html
+++ b/1.html
@@ -23,7 +23,10 @@
 <ol><li><a href="https://www.instagram.com/rhtmdrn/">INSTAGRAM</a></li>
     <li><a href="https://www.hoyolab.com/accountCenter/postList?id=90157948">HOYOLAB</a></li>
 <li><a href="https://opentutorials.org/course/1">OPENTUTORIALS</a></li>
-<li><a href="1.html" id="saw">NOW DOING</a></li></lo></ol>
+<li><a href="2.html">PAGES</a></li>
+<li><a href="1.html" id="saw">NOW DOING</a></li>
+
+</ol>
 
 <div id="apple"><h2>2023년 4월 7일</h2><p>egoing html css 시작</p>
     <h2>2023년 4월 9일</h2><p>html 강의 및 연습 완료 CSS GRID 사용법까지 연습완료.
